# make-initrd

./: .astylerc  .clang-format  .gitignore  .gitmodules  .travis.yml  AUTHORS  CONTRIBUTING.md  Makefile  Makefile.common  Makefile.in  Makefile.testsuite  NEWS.md  README.md  README.ru  aclocal.m4  autogen.sh  build.mk.in  config.h.in  config.mk  config.mk.in  configure.ac  guess.mk  initfiles.mk  initfiles.mk.in  initrd-autodetect.in  initrd-diff.1.inc  initrd-diff.in  initrd.mk  make-initrd.1.inc  make-initrd.in  make-initrd.mk.in  make-initrd.spec  make-initrd.texi  mkinitrd-make-initrd.in  rules.mk  rules.mk.in
.gear/: changelog  make-initrd.spec  rules
.github/: FUNDING.yml
.github/workflows/: ci.yml  image.yml  integration.yml  lint.yml  testcases.yml  verify.yml
Documentation/: BootInitramfs.md  BootParameters.md  BootRuntime.md  Configuration.md  Contributing.md  DeviceSpec.md  FAQ.md  Features.md  GuessConfiguration.md  HowInitramfsWorks.md  InitramfsServices.md  NewFeature.md  PollDetails.md  README.md  Root9p.md  UeventDetails.md
Documentation/manpages/: depinfo.1.md  initrd-diff.1.md  initrd-ls.1.md  initrd-put.1.md  initrd-scanmod.1.md  make-initrd.1.md
add.new.module.d/: add-new-sha256
autodetect/: detect-class  detect-input  detect-net  detect-root  functions
conf/: Makefile
conf/initrd.mk.d/: debug.mk.example  guestfs.mk.example  rescue.mk.example  uki.mk.example
config.d/: device-mapper.mk  lvm.mk
contrib/bash-completion/: depinfo  initrd-extract  initrd-ls  initrd-scanmod  make-initrd
data/: init
data/etc/: inittab  profile  rc0.d  rc1.d  rc3.d  rc4.d  rc6.d  tmux.conf
data/modules/: 000-defaults  000-prepare  001-defaults  005-prepare  010-cmdline  010-parse-cmdline  015-fstab  020-get-rootdev  030-get-resumedev  040-load-preudev  050-start-udev  050-startudev  050-udev  060-load-postudev  070-resume  080-loop  090-stopudev  (+9 more)
datasrc/: .gitignore  Makefile  container-caps.c  container-common.c  container-env.c  container-epoll.c  container-fds.c  container-hooks.c  container-mknod.c  container-mount.c  container-netns.c  container-ns.c  container-userns.c  container.c  container.h  devname.c  do_mounts.h  do_mounts_md.c  environ.c  halt.c  kinit.h  md.h  monotonic-timestamp.c  name_to_dev.c  replace.c  showenv.c  uevent-epoll.c  uevent-epoll.h  uevent-logging.c  uevent-logging.h  uevent-pidfile.c  uevent-pidfile.h  uevent-worker.c  uevent-worker.h  ueventd.c
docs/: BootParameters.md  BootRuntime.md  Configuration.md  DeviceSpec.md  Features.md  Goals.md  HowItWorks.md  MakeInitrdArguments.md  README.md  README.ru  UeventDetails.md
features/: README.md  bootsplash
guess/: README.md
include/: temp_failure_retry.h
initramfs-data/: initramfs-data.spec
initrd.mk.d/: rescue.mk.example
kmodule.deps.d/: add-deps-ext4  add-deps-libcrc32c
man/: Makefile  depinfo.1.inc  initrd-cp.1.inc  initrd-diff.1.inc  initrd-ls.1.inc  initrd-put.1.inc  initrd-scanmod.1.inc  make-initrd.1.inc
mk/: .gitignore  Makefile  config.mk.in  functions.mk.in  genimage.mk.in  guess.mk.in  initfiles.mk  initfiles.mk.in  main.mk.in  make-initrd.mk.in  packimage.mk.in  rules.mk  rules.mk.in  show-feature-info.mk.in
rules.d/: add-modules.mk  cleanup.mk  compress.mk  depmod-image.mk  device-mapper.mk  lazy-cleanup.mk  lvm.mk  optional-bootsplash.mk
runtime/: README.md
src/: Makefile  elfcheck.c  ifaddr.c  initrd-common.c  initrd-common.h  initrd-cpio.c  initrd-decompress-bzip2.c  initrd-decompress-gzip.c  initrd-decompress.c  initrd-decompress.h  initrd-ls  initrd-ls-format.c  initrd-ls.c  initrd-ls.h  initrd-parse.c  kmod-depinfo.c  ls.c  printenv.c  replace.c
testing/: TESTING.md  bugreport-coverage  expect-password  generate-metrics  ks-altlinux-initrd.cfg  ks-done.cfg  ks-fedora-initrd.cfg  ks-gentoo-initrd.cfg  ks-gentoo_musl-initrd.cfg  ks-ubuntu-initrd.cfg  orchestrator.py  packages-altlinux  packages-fedora  packages-gentoo  packages-gentoo_musl  packages-ubuntu  sh-functions  sh-pack-sysimage.sh  sh-run-boot.sh  sh-run-kickstart.sh  test-network-dhcp.sh  test-network-static1.sh  test-root-btrfs-raid1-degraded.cfg  test-root-btrfs-raid1.cfg  test-root-btrfs-subvol.cfg  test-root-efi-partition.cfg  test-root-efi-reqpartition.cfg  test-root-f2fs-partition.cfg  test-root-initramfs-on-erofs.cfg  test-root-initramfs-on-squashfs.cfg  test-root-iscsiroot.cfg  test-root-luks+crypttab+noparam.cfg  test-root-luks+lukskey-noparam.cfg  test-root-luks+lukskey-plain.cfg  test-root-luks+lukskey-raw.cfg  test-root-luks-expect  test-root-luks-over-lvm.cfg  test-root-luks-over-raid1.cfg  test-root-luks.cfg  test-root-lvm+luks.cfg  (+37 more)
tests/: Makefile  Makefile.testsuite  build-initrd.sh  build-rootfs-altlinux  build-rootfs-fedora  file-get.sh  file-pack.sh  hasher-build-rootfs  prepare-sysinit.sh  qemu-filter.bash  run.sh  shell.sh  travis-command-start  travis-command-stop
tools/: add-bootsplash  add-login  add-module  add-module-deps  add-module-pattern  add-modules-root  add-rescue-modules  add-ucode  autodetect  autodetect-modules  bug-report  check-state  compress-image  create-fstab  create-initrd  create-initrd-ext2  create-initrd-initramfs  create-initrd-romfs  create-rootfs  find-terminfo  find-udev-rule-externals  gen-ld-so-conf  get-ldconfig  get-libc-dir  get-variable  guess-common  guess-config  guess-device  guess-functions  guess-kbd  guess-net  guess-resume  guess-root  initrd-release  kernel-compare  kernel-version  load-module  module-functions  msg-timestamp  optional-bootsplash  (+20 more)
utils/: .gitignore  Makefile  README.gen_init_cpio  gen_init_cpio.c  initrd-common.c  initrd-common.h  initrd-cp.in  initrd-cpio.c  initrd-cpio.h  initrd-decompress-bzip2.c  initrd-decompress-gzip.c  initrd-decompress-lzma.c  initrd-decompress-zstd.c  initrd-decompress.c  initrd-decompress.h  initrd-extract.c  initrd-ls.c  initrd-parse.c  initrd-parse.h  initrd-python.sh  initrd-scanmod-file.c  initrd-scanmod-rules.c  initrd-scanmod-walk.c  initrd-scanmod.c  initrd-scanmod.h  kmod-depinfo.c  make-initrd.in  make-wiki.sh  mi-bug-report  mi-file.c  mkinitrd-make-initrd.in
(+1296 files in other folders)
